--- a/modules/apim_analytics_worker/templates/carbon-home/bin/worker.sh.erb
+++ b/modules/apim_analytics_worker/templates/carbon-home/bin/worker.sh.erb
@@ -14,7 +14,7 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-export JAVA_HOME="<%=@install_path%>/jdk/<%=@jdk_version%>"
+export JAVA_HOME="<%= @java_home %>"
 cygwin=false;
 darwin=false;
 os400=false;
