--- a/modules/apim_km_master/templates/carbon-home/repository/conf/carbon.xml.erb
+++ b/modules/apim_km_master/templates/carbon-home/repository/conf/carbon.xml.erb
@@ -44,12 +44,12 @@
        This is will become part of the End Point Reference of the
        services deployed on this server instance.
     -->
-    <!--HostName><%= @hostname %></HostName-->
+    <HostName></HostName>
 
     <!--
     Host name to be used for the Carbon management console
     -->
-    <!--MgtHostName><%= @mgt_hostname %></MgtHostName-->
+    <HostName></HostName>
 
     <!--
         The URL of the back end server. This is where the admin services are hosted and
