--- a/modules/apim_publisher_master/templates/carbon-home/repository/conf/axis2/axis2.xml.erb
+++ b/modules/apim_publisher_master/templates/carbon-home/repository/conf/axis2/axis2.xml.erb
@@ -655,7 +655,7 @@
      getting this node to join the cluster.
      -->
     <clustering class="org.wso2.carbon.core.clustering.hazelcast.HazelcastClusteringAgent"
-                enable="false">
+                enable="<%= @clustering_enabled %>">
 
         <!--
            This parameter indicates whether the cluster has to be automatically initalized
@@ -677,7 +677,7 @@
                     is deemed to have left the cluster, it will be detected by the Group Membership
                     Service (GMS) using a TCP ping mechanism.
         -->
-        <parameter name="membershipScheme">multicast</parameter>
+        <parameter name="membershipScheme"><%= @clustering_membership_scheme %></parameter>
         <!--<parameter name="licenseKey">xxx</parameter>-->
         <!--<parameter name="mgtCenterURL">http://localhost:8081/mancenter/</parameter>-->
 
@@ -706,7 +706,7 @@
         -->
         <!-- The host name or IP address of this member -->
 
-        <parameter name="localMemberHost">127.0.0.1</parameter>
+        <parameter name="localMemberHost">%local_ip%</parameter>
 
         <!--
             The bind adress of this member. The difference between localMemberHost & localMemberBindAddress
