--- a/modules/apim_gateway/templates/carbon-home/repository/conf/api-manager.xml.erb
+++ b/modules/apim_gateway/templates/carbon-home/repository/conf/api-manager.xml.erb
@@ -212,12 +212,12 @@
     -->
     <APIKeyValidator>
         <!-- Server URL of the API key manager -->
-        <ServerURL><%= @key_validator_server_url %></ServerURL>
+        <ServerURL>https://localhost:${mgt.transport.https.port}${carbon.context}services/</ServerURL>
 
         <!-- Admin username for API key manager. -->
-        <Username><%= @key_validator_username %></Username>
+        <Username>${admin.username}</Username>
         <!-- Admin password for API key manager. -->
-        <Password><%= @key_validator_password %></Password>
+        <Password>${admin.password}</Password>
 
         <!-- Configurations related to enable thrift support for key-management related communication.
              If you want to switch back to Web Service Client, change the value of "KeyValidatorClientType" to "WSClient".
@@ -231,7 +231,7 @@
         <!--ThriftClientPort>10397</ThriftClientPort-->
 
         <EnableThriftServer>false</EnableThriftServer>
-        <ThriftServerHost><%= @key_validator_thrift_server_host %></ThriftServerHost>
+        <ThriftServerHost>localhost</ThriftServerHost>
         <!--ThriftServerPort>10397</ThriftServerPort-->
 
         <!--ConnectionPool>
