--- a/modules/apim_analytics_worker/templates/carbon-home/conf/worker/deployment.yaml.erb
+++ b/modules/apim_analytics_worker/templates/carbon-home/conf/worker/deployment.yaml.erb
@@ -18,7 +18,7 @@
 wso2.carbon:
   type: wso2-apim-analytics
     # value to uniquely identify a server
-  id: wso2-am-analytics
+  id: <%= @carbon_id %>
     # server name
   name: WSO2 API Manager Analytics Server
     # ports used by this server
@@ -86,7 +86,7 @@ siddhi.stores.query.api:
 databridge.config:
     # No of worker threads to consume events
     # THIS IS A MANDATORY FIELD
-  workerThreads: 10
+  workerThreads: <%= @databridge_worker_threads %>
     # Maximum amount of messages that can be queued internally in MB
     # THIS IS A MANDATORY FIELD
   maxEventBufferCapacity: 10000000
@@ -126,8 +126,8 @@ databridge.config:
       properties:
         tcpPort: '9611'
         sslPort: '9711'
-        tcpReceiverThreadPoolSize: '100'
-        sslReceiverThreadPoolSize: '100'
+        tcpReceiverThreadPoolSize: '<%= @binary_data_receiver_tcp_pool_side %>'
+        sslReceiverThreadPoolSize: '<%= @binary_data_receiver_ssl_pool_side %>'
         hostName: <%= @binary_data_receiver_hostname %>
 
   # Configuration of the Data Agents - to publish events through databridge
@@ -299,12 +299,13 @@ wso2.artifact.deployment:
 
   # Periodic Persistence Configuration
 state.persistence:
-  enabled: false
-  intervalInMin: 1
-  revisionsToKeep: 2
+  enabled: <%= @state_persistence_enabled %>
+  intervalInMin: <%= @state_persistence_interval %>
+  revisionsToKeep: <%= @state_persistence_revisions %>
   persistenceStore: org.wso2.carbon.stream.processor.core.persistence.FileSystemPersistenceStore
   config:
-    location: siddhi-app-persistence
+    datasource: PERSISTENCE_DB
+    table: PERSISTENCE_TABLE
 
   # Secure Vault Configuration
 wso2.securevault:
@@ -352,7 +353,7 @@ wso2.datasources:
           driverClassName: <%= @metrics_db_driver %>
           maxPoolSize: 30
           idleTimeout: 60000
-          connectionTestQuery: SELECT 1
+          connectionTestQuery: <%= @metrics_db_test_query %>
           validationTimeout: 30000
           isAutoCommit: false
 
@@ -370,7 +371,7 @@ wso2.datasources:
           driverClassName: <%= @permission_db_driver %>
           maxPoolSize: 10
           idleTimeout: 60000
-          connectionTestQuery: SELECT 1
+          connectionTestQuery: <%= @permission_db_test_query %>
           validationTimeout: 30000
           isAutoCommit: false
 
@@ -387,7 +388,7 @@ wso2.datasources:
           driverClassName: <%= @message_tracing_db_driver %>
           maxPoolSize: 30
           idleTimeout: 60000
-          connectionTestQuery: SELECT 1
+          connectionTestQuery: <%= @message_tracing_db_test_query %>
           validationTimeout: 30000
           isAutoCommit: false
 
@@ -420,7 +421,7 @@ wso2.datasources:
           driverClassName: <%= @apim_analytics_db_driver %>
           maxPoolSize: 50
           idleTimeout: 60000
-          connectionTestQuery: SELECT 1
+          connectionTestQuery: <%= @apim_analytics_db_test_query %>
           validationTimeout: 30000
           isAutoCommit: false
 
@@ -438,6 +439,40 @@ wso2.datasources:
           maxPoolSize: 50
           idleTimeout: 60000
           connectionTestQuery: SELECT 1
+          validationTimeout: 30000
+          isAutoCommit: false
+
+    - name: PERSISTENCE_DB
+      description: The MySQL datasource used for persistence
+      jndiConfig:
+        name: jdbc/PERSISTENCE_DB
+      definition:
+        type: RDBMS
+        configuration:
+          jdbcUrl: '<%= @persistence_db_url %>'
+          username: <%= @persistence_db_username %>
+          password: <%= @persistence_db_password %>
+          driverClassName: <%= @persistence_db_driver %>
+          maxPoolSize: 50
+          idleTimeout: 60000
+          connectionTestQuery: <%= @persistence_db_test_query %>
+          validationTimeout: 30000
+          isAutoCommit: false
+
+    - name: WSO2_CLUSTER_DB
+      description: The MySQL datasource used for Cluster Coordination
+      jndiConfig:
+        name: jdbc/WSO2ClusterDB
+      definition:
+        type: RDBMS
+        configuration:
+          jdbcUrl: '<%= @cluster_db_url %>'
+          username: <%= @cluster_db_username %>
+          password: <%= @cluster_db_password %>
+          driverClassName: <%= @cluster_db_driver %>
+          maxPoolSize: 50
+          idleTimeout: 60000
+          connectionTestQuery: <%= @cluster_db_test_query %>
           validationTimeout: 30000
           isAutoCommit: false
 
@@ -466,47 +501,47 @@ siddhi:
 
   # Cluster Configuration
 cluster.config:
-  enabled: false
-  groupId:  sp
+  enabled: <%= @cluster_config_enabled %>
+  groupId:  <%= @cluster_config_group_id %>
   coordinationStrategyClass: org.wso2.carbon.cluster.coordinator.rdbms.RDBMSCoordinationStrategy
   strategyConfig:
-    datasource: WSO2_CARBON_DB
-    heartbeatInterval: 1000
-    heartbeatMaxRetry: 2
-    eventPollingInterval: 1000
+    datasource: WSO2_CLUSTER_DB
+    heartbeatInterval: <%= @cluster_config_heartbeat_interval %>
+    heartbeatMaxRetry: <%= @cluster_config_max_retry %>
+    eventPollingInterval: <%= @cluster_config_polling_interval %>
 
-  # Sample of deployment.config for Two node HA
-#deployment.config:
-#  type: ha
-#  eventSyncServer:
-#    host: localhost
-#    port: 9893
-#    advertisedHost: localhost
-#    advertisedPort: 9893
-#    bossThreads: 10
-#    workerThreads: 10
-#  eventSyncClientPool:
-#    maxActive: 10
-#    maxTotal: 10
-#    maxIdle: 10
-#    maxWait: 60000
-#    minEvictableIdleTimeMillis: 120000
+<% if @deployment_type == 'ha' %>
+deployment.config:
+  type: ha
+  eventSyncServer:
+    host: localhost
+    port: 9893
+    advertisedHost: localhost
+    advertisedPort: 9893
+    bossThreads: 10
+    workerThreads: 10
+  eventSyncClientPool:
+    maxActive: 10
+    maxTotal: 10
+    maxIdle: 10
+    maxWait: 60000
+    minEvictableIdleTimeMillis: 120000
+<% end %>
 
-  # Sample of deployment.config for Distributed deployment
-#deployment.config:
-#  type: distributed
-#  httpsInterface:
-#    host: 192.168.1.3
-#    port: 9443
-#    username: admin
-#    password: admin
-#  leaderRetryInterval: 10000
-#  resourceManagers:
-#    - host: 192.168.1.1
-#      port: 9543
-#      username: admin
-#      password: admin
-#    - host: 192.168.1.2
-#      port: 9543
-#      username: admin
-#      password: admin
+<% if @deployment_type == 'distributed' %>
+deployment.config:
+  type: distributed
+  httpsInterface:
+    host: 192.168.1.3
+    port: 9443
+    username: admin
+    password: admin
+  leaderRetryInterval: 10000
+  resourceManagers:
+    <% @resource_managers.each do |manager| %>
+    - host: <%= manager['host'] %>
+      port: <%= manager['port'] %>
+      username: <%= manager['username'] %>
+      password: <%= manager['password'] %>
+    <% end %>
+<% end %>
