--- a/modules/apim/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -1,7 +1,5 @@
 [server]
 hostname = "<%= @hostname %>"
-node_ip = "<%= @binary_data_receiver_hostname %>"
-mode = "single"
 base_path = "${carbon.protocol}://${carbon.host}:${carbon.management.port}"
 #discard_empty_caches = false
 server_role = "default"
@@ -66,7 +64,12 @@ ws_endpoint = "<%= environment['ws_endpoint'] %>"
 wss_endpoint = "<%= environment['wss_endpoint'] %>"
 http_endpoint = "<%= environment['http_endpoint'] %>"
 https_endpoint = "<%= environment['https_endpoint'] %>"
+websub_event_receiver_http_endpoint = "<%= environment['websub_event_receiver_http_endpoint'] %>"
+websub_event_receiver_https_endpoint = "<%= environment['websub_event_receiver_https_endpoint'] %>"
 <% end %>
+
+[apim.sync_runtime_artifacts.gateway]
+gateway_labels = <%= @gateway_labels %>
 
 #[apim.cache.gateway_token]
 #enable = true
@@ -98,19 +101,9 @@ https_endpoint = "<%= environment['https_endpoint'] %>"
 
 
 [apim.analytics]
-enable = "<%= @analytics_enabled %>"
-receiver_username = "<%= @stream_processor_username %>"
-receiver_password = "<%= @stream_processor_password %>"
-store_api_url = "<%= @stream_processor_rest_api_url %>"
-store_api_username = "<%= @stream_processor_rest_api_username %>"
-store_api_password = "<%= @stream_processor_rest_api_password %>"
-
-<% @analytics_url_group.each do |url_group| %>
-[[apim.analytics.url_group]]
-analytics_url =[<%= url_group['analytics_urls'] %>]
-analytics_auth_url =[<%= url_group['analytics_auth_urls'] %>]
-
-<% end %>
+enable = <%= @analytics_enabled %>
+config_endpoint = "<%= @analytics_config_endpoint %>"
+auth_token = "<%= @analytics_auth_token %>"
 
 [apim.key_manager]
 service_url = "<%= @key_manager_server_url %>"
@@ -145,19 +138,31 @@ revoke_endpoint = "<%= @oauth_configs_revoke_api_url %>"
 
 [apim.devportal]
 url = "<%= @api_devportal_url %>"
+#enable_application_sharing = false
+#if application_sharing_type, application_sharing_impl both defined priority goes to application_sharing_impl
+#application_sharing_type = "default" #changed type, saml, default #todo: check the new config for rest api
+#application_sharing_impl = "org.wso2.carbon.apimgt.impl.SAMLGroupIDExtractorImpl"
+#display_multiple_versions = false
+#display_deprecated_apis = false
+#enable_comments = true
+#enable_ratings = true
+#enable_forum = true
+#enable_anonymous_mode=true
+#enable_cross_tenant_subscriptions = true
+#default_reserved_username = "apim_reserved_user"
 
 [apim.cors]
 allow_origins = "*"
 allow_methods = ["GET","PUT","POST","DELETE","PATCH","OPTIONS"]
-allow_headers = ["authorization","Access-Control-Allow-Origin","Content-Type","SOAPAction"]
+allow_headers = ["authorization","Access-Control-Allow-Origin","Content-Type","SOAPAction","apikey","Internal-Key"]
 allow_credentials = false
 
-[apim.throttling]
+#[apim.throttling]
 #enable_data_publishing = true
 #enable_policy_deploy = true
 #enable_blacklist_condition = true
 #enable_persistence = true
-<% @throttling_url_group.each do |url_group| %>
+#throttle_decision_endpoints = ["tcp://localhost:5672","tcp://localhost:5672"]
 
 #[apim.throttling.blacklist_condition]
 #start_delay = "5m"
@@ -174,11 +179,12 @@ allow_credentials = false
 #hostName = "0.0.0.0"
 #port = 10005
 
-[[apim.throttling.url_group]]
-traffic_manager_urls=[<%= url_group['traffic_manager_urls'] %>]
-traffic_manager_auth_urls=[<%= url_group['traffic_manager_auth_urls'] %>]
-#type = "loadbalance"
-<% end %>
+# <% @throttling_url_group.each do |url_group| %>
+# [[apim.throttling.url_group]]
+# traffic_manager_urls=[<%= url_group['traffic_manager_urls'] %>]
+# traffic_manager_auth_urls=[<%= url_group['traffic_manager_auth_urls'] %>]
+# type = "loadbalance"
+# <% end %>
 
 #[apim.workflow]
 #enable = false
@@ -233,3 +239,14 @@ sp_name_regex = "^[\\sa-zA-Z0-9._-]*$"
 
 [database.local]
 url = "jdbc:h2:./repository/database/WSO2CARBON_DB;DB_CLOSE_ON_EXIT=FALSE"
+
+[[event_listener]]
+id = "token_revocation"
+type = "org.wso2.carbon.identity.core.handler.AbstractIdentityHandler"
+name = "org.wso2.is.notification.ApimOauthEventInterceptor"
+order = 1
+[event_listener.properties]
+notification_endpoint = "https://localhost:${mgt.transport.https.port}/internal/data/v1/notify"
+username = "${admin.username}"
+password = "${admin.password}"
+'header.X-WSO2-KEY-MANAGER' = "default"
