--- a/modules/apim_gateway/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim_gateway/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -1,6 +1,5 @@
 [server]
 hostname = "<%= @hostname %>"
-node_ip = "127.0.0.1"
 server_role = "gateway-worker"
 offset = "<%= @ports_offset %>"
 
@@ -17,7 +16,6 @@ type = "<%= @wso2shared_db_type %>"
 url = "<%= @wso2shared_db_url %>"
 username = "<%= @wso2shared_db_username %>"
 password = "<%= @wso2shared_db_password %>"
-
 [database.shared_db.pool_options]
 validationQuery = "<%= @wso2shared_db_validation_query %>"
 
@@ -33,30 +31,36 @@ file_name = "<%= @trust_store_location %>"
 type = "JKS"
 password = "<%= @trust_store_password %>"
 
+[apim.sync_runtime_artifacts.gateway]
+gateway_labels = <%= @gateway_labels %>
+
 # key manager implementation
 [apim.key_manager]
 service_url = "<%= @key_manager_server_url %>"
 username= "$ref{super_admin.username}"
 password= "$ref{super_admin.password}"
-#pool.init_idle_capacity=50
-#pool.max_idle=100
-#custom_key_validation_handler="org.wso2.carbon.apimgt.keymgt.handlers.DefaultKeyValidationHandler"
+
+# JWT Generation
+[apim.jwt]
+enable = true
+encoding = "base64" # base64,base64url
+#generator_impl = "org.wso2.carbon.apimgt.keymgt.token.JWTGenerator"
+claim_dialect = "http://wso2.org/claims"
+header = "X-JWT-Assertion"
+signing_algorithm = "SHA256withRSA"
+#enable_user_claims = true
+#claims_extractor_impl = "org.wso2.carbon.apimgt.impl.token.DefaultClaimsRetriever"
 
 # Traffic Manager configurations
 [apim.throttling]
-receiver_url = "<%= @traffic_manager_receiver_url %>"
-receiver_auth_url = "<%= @traffic_manager_auth_url %>"
-service_url = "<%= @api_devportal_server_url %>"
 username= "$ref{super_admin.username}"
 password= "$ref{super_admin.password}"
-jms.topic_connection_factory = "<%= @jms_conn_factory %>"
-
-enable_unlimited_tier = true
-enable_header_based_throttling = false
-enable_jwt_claim_based_throttling = false
-enable_query_param_based_throttling = false
-
+service_url = "<%= @throttle_service_url %>"
 throttle_decision_endpoints = [<%= @throttle_decision_endpoints %>]
+# enable_unlimited_tier = true
+# enable_header_based_throttling = false
+# enable_jwt_claim_based_throttling = false
+# enable_query_param_based_throttling = false
 
 <% @throttling_url_group.each do |url_group| %>
 [[apim.throttling.url_group]]
@@ -65,18 +69,9 @@ traffic_manager_auth_urls=[<%= url_group['traffic_manager_auth_urls'] %>]
 <% end %>
 
 [apim.analytics]
-enable = "<%= @analytics_enabled %>"
-username= "$ref{super_admin.username}"
-password= "$ref{super_admin.password}"
-store_api_url = "<%= @stream_processor_rest_api_url %>"
-store_api_username = "<%= @stream_processor_rest_api_username %>"
-store_api_password = "<%= @stream_processor_rest_api_password %>"
-
-<% @analytics_url_group.each do |url_group| %>
-[[apim.analytics.url_group]]
-analytics_url =[<%= url_group['analytics_urls'] %>]
-analytics_auth_url =[<%= url_group['analytics_auth_urls'] %>]
-<% end %>
+enable = <%= @analytics_enabled %>
+config_endpoint = "<%= @analytics_config_endpoint %>"
+auth_token = "<%= @analytics_auth_token %>"
 
 [apim.cache.gateway_token]
 enable = true
@@ -85,6 +80,10 @@ expiry_time = 15
 [apim.cache.resource]
 enable = true
 
+[apim.cache.jwt_claim]
+enable = true
+expiry_time = 900
+
 [apim.oauth_config]
 remove_outbound_auth_header = true
 auth_header = "Authorization"
@@ -92,5 +91,5 @@ auth_header = "Authorization"
 [apim.cors]
 allow_origins = "*"
 allow_methods = ["GET","PUT","POST","DELETE","PATCH","OPTIONS"]
-allow_headers = ["authorization","Access-Control-Allow-Origin","Content-Type","SOAPAction"]
+allow_headers = ["authorization","Access-Control-Allow-Origin","Content-Type","SOAPAction","apikey","Internal-Key"]
 allow_credentials = false
