--- a/modules/apim_tm/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim_tm/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -1,6 +1,5 @@
 [server]
 hostname = "<%= @hostname %>"
-node_ip = "127.0.0.1"
 server_role = "traffic-manager"
 offset = "<%= @ports_offset %>"
 
@@ -11,6 +10,14 @@ type = "database_unique_id"
 username = "<%= @admin_username %>"
 password = "<%= @admin_password %>"
 create_admin_account = true
+
+[database.apim_db]
+type = "<%= @wso2am_db_type %>"
+url = "<%= @wso2am_db_url %>"
+username = "<%= @wso2am_db_username %>"
+password = "<%= @wso2am_db_password %>"
+[database.apim_db.pool_options]
+validationQuery = "<%= @wso2am_db_validation_query %>"
 
 [database.shared_db]
 type = "<%= @wso2shared_db_type %>"
@@ -32,34 +39,29 @@ file_name = "<%= @trust_store_location %>"
 type = "JKS"
 password = "<%= @trust_store_password %>"
 
-#[apim.throttling]
-#enable_data_publishing = true
-#enable_policy_deploy = true
-#enable_blacklist_condition = true
-#enable_persistence = true
-#throttle_decision_endpoints = ["tcp://localhost:5672","tcp://localhost:5672"]
+# key manager implementation
+[apim.key_manager]
+service_url = "<%= @key_manager_server_url %>"
 
-#[apim.throttling.blacklist_condition]
-#start_delay = "5m"
-#period = "1h"
+[apim.oauth_config]
+revoke_endpoint = "<%= @oauth_configs_revoke_api_url %>"
+enable_token_encryption = false
+enable_token_hashing = false
 
-#[apim.throttling.jms]
-#start_delay = "5m"
-
-#[apim.throttling.event_sync]
-#hostName = "0.0.0.0"
-#port = 11224
-
-#[apim.throttling.event_management]
-#hostName = "0.0.0.0"
-#port = 10005
-
-#[[apim.throttling.url_group]]
-#traffic_manager_urls = ["tcp://localhost:9611","tcp://localhost:9611"]
-#traffic_manager_auth_urls = ["ssl://localhost:9711","ssl://localhost:9711"]
-#type = "loadbalance"
-
-#[[apim.throttling.url_group]]
-#traffic_manager_urls = ["tcp://localhost:9611","tcp://localhost:9611"]
-#traffic_manager_auth_urls = ["ssl://localhost:9711","ssl://localhost:9711"]
-#type = "failover"
+<% @gateway_environments.each do |environment| %>
+[[apim.gateway.environment]]
+name = "<%= environment['name'] %>"
+type = "<%= environment['type'] %>"
+display_in_api_console = true
+description = "<%= environment['description'] %>"
+show_as_token_endpoint_url = true
+service_url = "<%= environment['server_url'] %>"
+username= "${admin.username}"
+password= "${admin.password}"
+ws_endpoint = "<%= environment['ws_endpoint'] %>"
+wss_endpoint = "<%= environment['wss_endpoint'] %>"
+http_endpoint = "<%= environment['http_endpoint'] %>"
+https_endpoint = "<%= environment['https_endpoint'] %>"
+websub_event_receiver_http_endpoint = "<%= environment['websub_event_receiver_http_endpoint'] %>"
+websub_event_receiver_https_endpoint = "<%= environment['websub_event_receiver_https_endpoint'] %>"
+<% end %>
