--- a/modules/apim/templates/carbon-home/repository/conf/deployment.toml.erb
+++ b/modules/apim/templates/carbon-home/repository/conf/deployment.toml.erb
@@ -111,6 +111,7 @@ config_endpoint = "<%= @analytics_config_endpoint %>"
 auth_token = "<%= @analytics_auth_token %>"
 
 [apim.key_manager]
+enable_apikey_subscription_validation = true
 service_url = "<%= @key_manager_server_url %>"
 #username = "$ref{super_admin.username}"
 #password = "$ref{super_admin.password}"
